Bug 1377128 - Screenshots overlay button icons are not displayed on latest Nightly build. r=jimm

Set the content type on remote channels in the moz-extension protocol handler.

MozReview-Commit-ID: H6XtYHjhS1Q

--HG--
extra : rebase_source : 48684ab78458b6723f1fd2c9860a5d36e7f5cc8e